ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

10/24/05 tfautre

	(Backported patches from STABLE branch, applied by Adam)
	
	* dRandInt changed for a non-double all-int version.
	* mics minor fixes and improvements.

04/05/05 tfautre

	* Fixed segmentation fault with OPCODE on 64 bits systems.

03/31/05 tfautre

	* Fixed timer.cpp compiler error on x86-64 using GCC.

03/29/05 colin

	* Added trimesh preprocessing to mark unneeded edges and verts.  Also
	  added support for preprocessed info to the ccylinder-trimesh
	  collider.

12/07/04 adam

        * Important AMotors bugfix

09/22/04 jeff

	* Assorted small bugfixes and tweaks for
          trimesh_{box,ccylinder,trimesh} collisions

09/21/04 jeff

	* added functions to joint.cpp to allow joint attachment to moving
	  geoms.

	* added malloc-based memory allocation in step.cpp & lcp.cpp (turned
	  on with a #define switch in common.h)
	
05/29/04 russ

	* added joint feedback to the QuickStep solver

05/18/04 russ

	* added warm starting to the QuickStep solver

05/18/04 russ

	* added the QuickStep solver
	
	* added contact parameter functions.

05/05/04 adam

        * use dRandInt instead of rand() in stepfast.

04/21/04 russ

	* added auto-disable support from Aras Pranckevicius (with
	  modifications by russ). this useful feature can speed up
	  simulation significantly in some cases.
	
	* various internal tidyups.

04/20/04 russ

	* changed the meaning of the 'index' argument to dJointGetBody():
	  it was the only remaining API function that does not respect
	  dJOINT_REVERSE (spotted by Matthew D. Hancher).
	
	* updated the C++ headers: fixed two minor bugs and added